...
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_home">Home</string>
    <string name="navigation_drawer_icon">Drawer element icon</string>

    <!-- ACTIONS -->
    <string name="action_settings">Settings</string>
    <string name="action_credits">Credits</string>
    <string name="action_save">Save</string>
    <string name="action_search">Search</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="set_as_completed_notice">Set as completed</string>
    <string name="set_as_done_movie">I\'ve watched this</string>
    <string name="set_as_done_book">I\'ve read this</string>
    <string name="set_as_done_videogame">I\'ve played this</string>
    <string name="set_as_done_tv_show">I\'ve completed this</string>
...
