...
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.OnlyCategoryFormActivity">

    <!-- Name -->
    <EditText
        android:id="@+id/form_title_input"
        style="@style/FormTextInputOneLine"
        android:textSize="@dimen/form_title_input_text_size"
        android:hint="@string/form_title_category_name"/>

    <LinearLayout
        android:layout_width="match_parent"
...
